--- a/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_teacher.html
+++ b/PTI/Semanas/semana_12/Floofy/floofy_project/templates/login/logged_teacher.html
@@ -15,7 +15,7 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 offset-lg-4">
             <br>
 
-            <a  id="link_nav" class="text-center btn btn-block btn-outline-dark" href="/login-student">Cadeiras</a>
+            <a  id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'select-subject-page' %}">Cadeiras</a>
             <br>
             <a id="link_nav" class="text-center btn btn-block btn-outline-dark" href="{% url 'select-forum-subject' %}">Fóruns</a>
             <br>
